[project]
name = "ai-incident-response-commander"
version = "0.1.0"
description = "AI agent for incident response simulation"
authors = [{ name = "Nirwahan" }]

dependencies = [
    "flask",
    "gradio",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"